@@ -10,18 +10,10 @@
             $('#id_date_from').datetimepicker({
                 timepicker: false,
                 format: 'Y-m-d',
-                i18n: {
-                    lang: window.dateTimePickerTranslations
-                },
-                lang: 'lang'
             });
             $('#id_date_to').datetimepicker({
                 timepicker: false,
                 format: 'Y-m-d',
-                i18n: {
-                    lang: window.dateTimePickerTranslations
-                },
-                lang: 'lang'
             });
 
             var selectAllCheckbox = document.getElementById('select-all');
